# Wave_Rover

./: .gitignore  README.md
src/argus_camera_publisher/: argus_camera_publisher.py  package.xml  setup.cfg  setup.py
src/argus_camera_publisher/argus_camera_publisher/: argus_camera_node.py
src/crsf_to_joy_bridge/: package.xml  setup.cfg  setup.py
src/crsf_to_joy_bridge/crsf_to_joy_bridge/: crsf_to_joy.py
src/esp32_serial_bridge/: package.xml  setup.cfg  setup.py
src/esp32_serial_bridge/esp32_serial_bridge/: esp32_serial_bridge_node.py
src/esp32_serial_bridge/launch/: robot_launch.py
src/esp32_serial_bridge/rviz/: wave_rover.rviz
src/esp32_serial_bridge/urdf/: wave_rover.urdf  wave_rover.urdf.xacro
src/rc_mapping_bringup/: package.xml  setup.cfg  setup.py  teleop_params.yaml
src/rc_mapping_bringup/launch/: manual_mapping.launch.py
src/ros2_crsf_receiver/crsf_receiver/src/: crsf_receiver.cpp
src/simple_joy_to_cmd/: package.xml  setup.cfg  setup.py
src/simple_joy_to_cmd/simple_joy_to_cmd/: simple_joy_to_cmd_node.py
src/yahboom_bridge/: package.xml  setup.cfg  setup.py
src/yahboom_bridge/yahboom_bridge/: robot_command_handler.py  serial_reader.py  yahboom_serial_bridge.py
startup/: start_wave_rover.sh  wave_rover.service
